--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TW Coming Soon | Free Tailwindcss theme by Fyrestrap</title>
+  <title>GoodsWala LLP</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,68 +41,68 @@
       <div class="flex h-full">
         <div class="w-full md:w-1/2 bg-gradient-to-b from-gray-900/90 to-gray-900/95 p-10 flex">
           <div class="w-full text-center my-auto">
-            <h1 class="font-bold text-5xl font-Comforter-Brush text-amber-500 my-10 md:text-right">Launcher.</h1>
+<!--            <h1 class="font-bold text-5xl font-Comforter-Brush text-amber-500 my-10 md:text-right">Launcher.</h1>-->
             <h6 class="font-Montserrat font-bold uppercase text-4xl md:text-5xl lg:text-6xl mb-14 md:-mr-20 text-white md:text-right">Coming <span class="text-white/70 md:-mr-20">soon</span></h6>
 
             
             <!-- Count down -->
-            <div class="w-full text-left flex mb-10">
-              <ul class="w-full flex place-content-center md:place-content-end gap-5 mx-auto text-gray-50">        
-                <li>
-                  <div class="font-bold text-white rounded-full border-dotted border-gray-700 border-4 flex items-center justify-center text-2xl lg:text-4xl h-16 lg:h-24 w-16 lg:w-24" id="cdD">00</div>
-                  <p class="text-center text-xs mt-2">Days</p>
-                </li>
+<!--            <div class="w-full text-left flex mb-10">-->
+<!--              <ul class="w-full flex place-content-center md:place-content-end gap-5 mx-auto text-gray-50">        -->
+<!--                <li>-->
+<!--                  <div class="font-bold text-white rounded-full border-dotted border-gray-700 border-4 flex items-center justify-center text-2xl lg:text-4xl h-16 lg:h-24 w-16 lg:w-24" id="cdD">00</div>-->
+<!--                  <p class="text-center text-xs mt-2">Days</p>-->
+<!--                </li>-->
 
-                <li>
-                  <div class="font-bold text-white rounded-full border-dotted border-gray-700 border-4 flex items-center justify-center text-2xl lg:text-4xl h-16 lg:h-24 w-16 lg:w-24" id="cdH">00</div>
-                  <p class="text-center text-xs mt-2">Hours</p>
-                </li>
+<!--                <li>-->
+<!--                  <div class="font-bold text-white rounded-full border-dotted border-gray-700 border-4 flex items-center justify-center text-2xl lg:text-4xl h-16 lg:h-24 w-16 lg:w-24" id="cdH">00</div>-->
+<!--                  <p class="text-center text-xs mt-2">Hours</p>-->
+<!--                </li>-->
 
-                <li>
-                  <div class="font-bold text-white rounded-full border-dotted border-gray-700 border-4 flex items-center justify-center text-2xl lg:text-4xl h-16 lg:h-24 w-16 lg:w-24" id="cdM">00</div>
-                  <p class="text-center text-xs mt-2">Minutes</p>
-                </li>
+<!--                <li>-->
+<!--                  <div class="font-bold text-white rounded-full border-dotted border-gray-700 border-4 flex items-center justify-center text-2xl lg:text-4xl h-16 lg:h-24 w-16 lg:w-24" id="cdM">00</div>-->
+<!--                  <p class="text-center text-xs mt-2">Minutes</p>-->
+<!--                </li>-->
 
-                <li>
-                  <div class="font-bold text-white rounded-full border-dotted border-gray-700 border-4 flex items-center justify-center text-2xl lg:text-4xl h-16 lg:h-24 w-16 lg:w-24" id="cdS">00</div>
-                  <p class="text-center text-xs mt-2">Seconds</p>
-                </li>
+<!--                <li>-->
+<!--                  <div class="font-bold text-white rounded-full border-dotted border-gray-700 border-4 flex items-center justify-center text-2xl lg:text-4xl h-16 lg:h-24 w-16 lg:w-24" id="cdS">00</div>-->
+<!--                  <p class="text-center text-xs mt-2">Seconds</p>-->
+<!--                </li>-->
 
-              </ul>
-            </div>
+<!--              </ul>-->
+<!--            </div>-->
 
 
-            <p class="text-base mb-14 text-gray-200 md:text-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta reprehenderit delectus quasi eligendi maiores consectetur repellat necessitatibus libero deleniti quaerat debitis, odit earum modi. Magni porro iste dolores.</p>
+<!--            <p class="text-base mb-14 text-gray-200 md:text-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta reprehenderit delectus quasi eligendi maiores consectetur repellat necessitatibus libero deleniti quaerat debitis, odit earum modi. Magni porro iste dolores.</p>-->
 
             <!-- Social media -->
-            <div class="w-full text-left flex mb-5">
-              <ul class="w-full flex place-content-center md:place-content-end gap-10 mx-auto text-gray-500">        
-                <li>
-                  <a href="#" class="text-lg hover:text-amber-500">
-                    <i class="fab fa-facebook-f"></i>
-                  </a>
-                </li>
+<!--            <div class="w-full text-left flex mb-5">-->
+<!--              <ul class="w-full flex place-content-center md:place-content-end gap-10 mx-auto text-gray-500">        -->
+<!--                <li>-->
+<!--                  <a href="#" class="text-lg hover:text-amber-500">-->
+<!--                    <i class="fab fa-facebook-f"></i>-->
+<!--                  </a>-->
+<!--                </li>-->
 
-                <li>
-                  <a href="#" class="text-lg hover:text-amber-500">
-                    <i class="fab fa-twitter"></i>
-                  </a>
-                </li>
+<!--                <li>-->
+<!--                  <a href="#" class="text-lg hover:text-amber-500">-->
+<!--                    <i class="fab fa-twitter"></i>-->
+<!--                  </a>-->
+<!--                </li>-->
 
-                <li>
-                  <a href="#" class="text-lg hover:text-amber-500">
-                    <i class="fab fa-youtube"></i>
-                  </a>
-                </li>
+<!--                <li>-->
+<!--                  <a href="#" class="text-lg hover:text-amber-500">-->
+<!--                    <i class="fab fa-youtube"></i>-->
+<!--                  </a>-->
+<!--                </li>-->
 
-                <li>
-                  <a href="#" class="text-lg hover:text-amber-500">
-                    <i class="fab fa-instagram"></i>
-                  </a>
-                </li>
+<!--                <li>-->
+<!--                  <a href="#" class="text-lg hover:text-amber-500">-->
+<!--                    <i class="fab fa-instagram"></i>-->
+<!--                  </a>-->
+<!--                </li>-->
 
-              </ul>
-            </div>
+<!--              </ul>-->
+<!--            </div>-->
 
           </div>
         </div>
